Reach `9.30666` by ensembling with 11 .csv files.
Finished the try of the drop and mean models.

--- a/hw1/ensemble/Ensemble.ipynb
+++ b/hw1/ensemble/Ensemble.ipynb
@@ -21,7 +21,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['./csv\\\\9.36666_bahdanau_attentions_max_focal.csv', './csv\\\\9.39333_bigru_batt_max_focal.csv', './csv\\\\9.40666_bigru_batt4_max_focal.csv', './csv\\\\9.42000_bahdanau_attentions_max, cat4.csv', './csv\\\\9.46000_bahdanau_attentions_max.csv', './csv\\\\9.46000_bigru_batt4_max.csv']\n"
+      "['./csv\\\\9.35333_bigru_batt_max_focal.csv', './csv\\\\9.36666_bahdanau_attentions_max_focal.csv', './csv\\\\9.36666_bigru_batt_max_bce.csv', './csv\\\\9.39333_bigru_batt_max_focal.csv', './csv\\\\9.40000_bahdanau_norm_attentions_max_focal.csv', './csv\\\\9.40000_bigru_batt_mean_focal.csv', './csv\\\\9.40666_bigru_batt4_max_focal.csv', './csv\\\\9.41333_bigru_batt_drop_max_focal.csv', './csv\\\\9.42000_bahdanau_attentions_max, cat4.csv', './csv\\\\9.42666_bigru_bnatt_max_focal.csv', './csv\\\\9.43333_bigru_batt_5_max_focal.csv']\n"
      ]
     }
    ],
