--- a/hw1/ensemble/Ensemble.ipynb
+++ b/hw1/ensemble/Ensemble.ipynb
@@ -21,18 +21,46 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['./csv\\\\9.35333_bigru_batt_max_focal.csv', './csv\\\\9.36666_bahdanau_attentions_max_focal.csv', './csv\\\\9.36666_bigru_batt_max_bce.csv', './csv\\\\9.37333_bilstm_batt_max_focal.csv', './csv\\\\9.39333_bigru_batt_max_focal.csv', './csv\\\\9.40000_bahdanau_norm_attentions_max_focal.csv', './csv\\\\9.40000_bigru_batt_mean_focal.csv', './csv\\\\9.40666_bigru_batt4_max_focal.csv', './csv\\\\9.40666_deep_bigru_batt_max_focal.csv', './csv\\\\9.41333_bigru_batt_drop_max_focal.csv', './csv\\\\9.41333_bigru_lnatt_max_focal.csv', './csv\\\\9.42000_bahdanau_attentions_max, cat4.csv', './csv\\\\9.42666_bigru_bnatt_max_focal.csv', './csv\\\\9.43333_bigru_batt_5_max_focal.csv']\n"
+      "['./csv\\\\0.5202_bigru_max_focal.csv', './csv\\\\0.7162_bigru_latt_max_focal.csv', './csv\\\\0.7286_deep_bigru_batt_max_focal.csv', './csv\\\\0.7354_fat_bigru_batt_max_focal.csv', './csv\\\\0.7418_bigru_lnatt_max_focal.csv', './csv\\\\0.7426_bilstm_batt_mean_focal.csv', './csv\\\\0.7458_bigru_batt_drop_max_focal.csv', './csv\\\\0.7458_bigru_bnatt_max_focal.csv', './csv\\\\0.7466_bigru_batt_5_max_focal.csv', './csv\\\\0.7474_bigru_batt_mean_focal.csv', './csv\\\\0.7490_bilstm_batt_5_max_focal.csv', './csv\\\\0.7512_bigru_batt_max_bce.csv', './csv\\\\0.7516_thin_bigru_batt_max_focal.csv', './csv\\\\0.7522_bilstm_batt_max_focal.csv', './csv\\\\0.7524_bigru_batt_max_focal.csv', './csv\\\\0.7554_bilstm_batt_max_bce.csv']\n",
+      "16\n"
      ]
     }
    ],
    "source": [
     "fnames = glob('./csv/*.csv')\n",
-    "print (fnames)"
+    "print(fnames)\n",
+    "print(len(fnames))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['./csv\\\\0.7512_bigru_batt_max_bce.csv', './csv\\\\0.7516_thin_bigru_batt_max_focal.csv', './csv\\\\0.7522_bilstm_batt_max_focal.csv', './csv\\\\0.7524_bigru_batt_max_focal.csv', './csv\\\\0.7554_bilstm_batt_max_bce.csv']\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "THRESHOLD = 0.75\n",
+    "del_fnames = []\n",
+    "for fname in fnames:\n",
+    "    recall = float(fname.replace('./csv\\\\', '').split('_')[0])\n",
+    "    if (recall < THRESHOLD):\n",
+    "        del_fnames.append(fname)\n",
+    "fnames = [x for x in fnames if x not in del_fnames]\n",
+    "print(fnames)\n",
+    "print(len(fnames))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +130,7 @@
     "    ensembled_label[best_ids[r, -TOP_AT:]] = 1\n",
     "    ensembled_labels.append(''.join(['1-' if x else '0-' for x in ensembled_label]))\n",
     "submit['Predict'] = ensembled_labels\n",
-    "submit.to_csv('Ensemble.csv', index=False)"
+    "submit.to_csv('Ensemble_{}.csv'.format(THRESHOLD), index=False)"
    ]
   }
  ],
