--- a/hw2/ensemble/Ensemble.ipynb
+++ b/hw2/ensemble/Ensemble.ipynb
@@ -21,8 +21,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['./csv\\\\bcn_elmo\\\\epoch-12.csv', './csv\\\\bcn_elmo\\\\epoch-14.csv', './csv\\\\bcn_elmo\\\\epoch-16.csv', './csv\\\\bcn_elmo\\\\epoch-3.csv', './csv\\\\bcn_elmo\\\\epoch-5.csv', './csv\\\\bcn_flair\\\\epoch-10.csv', './csv\\\\bcn_flair\\\\epoch-18.csv', './csv\\\\bcn_flair\\\\epoch-20.csv', './csv\\\\bcn_flair\\\\epoch-7.csv', './csv\\\\bcn_flair\\\\epoch-9.csv']\n",
-      "10\n"
+      "['./csv\\\\0.49864_bcn_bert\\\\epoch-16.csv', './csv\\\\0.49864_bcn_bert\\\\epoch-2.csv', './csv\\\\0.49864_bcn_bert\\\\epoch-3.csv', './csv\\\\0.49864_bcn_bert\\\\epoch-5.csv', './csv\\\\0.49864_bcn_bert\\\\epoch-7.csv', './csv\\\\0.50407_bcn_elmo\\\\epoch-12.csv', './csv\\\\0.50407_bcn_elmo\\\\epoch-14.csv', './csv\\\\0.50407_bcn_elmo\\\\epoch-16.csv', './csv\\\\0.50407_bcn_elmo\\\\epoch-3.csv', './csv\\\\0.50407_bcn_elmo\\\\epoch-5.csv', './csv\\\\0.53031_bcn_bert_elmo\\\\epoch-1.csv', './csv\\\\0.53031_bcn_bert_elmo\\\\epoch-4.csv', './csv\\\\0.53031_bcn_bert_elmo\\\\epoch-5.csv', './csv\\\\0.53031_bcn_bert_elmo\\\\epoch-6.csv', './csv\\\\0.53031_bcn_bert_elmo\\\\epoch-9.csv']\n",
+      "15\n"
      ]
     }
    ],
